--- a/index.html
+++ b/index.html
@@ -1,90 +1,148 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+  Alpha by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Derektinydj.GitHub.io by derektinydj</title>
+    <title>Tiny DJ Studios</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   </head>
-
-  <body>
-    <a id="forkme_banner" href="https://github.com/derektinydj">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Derektinydj.GitHub.io</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
-
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
-      </div>
+  <body class="landing">
+    <div id="page-wrapper">
 
 
-      <span class="banner-fix"></span>
+      <!-- Banner -->
+        <section id="banner">
+          <h2>Tiny DJ Studios</h2>
+          <p>Poineers in Interactive Art and Game Design</p>
+          <ul class="actions">
+            <!-- <li><a href="#" class="button special">Sign Up</a></li> -->
+            <!-- <li><a href="#cta" class="button"> Get In Touch</a></li> -->
+          </ul>
+        </section>
 
+      <!-- Main -->
+        <section id="main" class="container">
 
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <section class="box special">
+            <header class="major">
+              <h2>We are a Creative Collective</h2>
+              <p>A free-thinking group of artists, composers, designers, and other creatives who work </br> together to push the boundries of web and mobile interactive experiences</p>
+              <p> We're currently heads down building our first few major projects, but if you'd like </br> to recieve updates on the exciting things we're doing sign up for our mailing list below!</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+            </header>
+            <!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span> -->
+          </section>
+<!-- 
+          <section class="box special features">
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+            <div class="features-row">
+              <section>
+                <span class="icon major fa-bolt accent2"></span>
+                <h3>Magna etiam</h3>
+                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+              </section>
+              <section>
+                <span class="icon major fa-area-chart accent3"></span>
+                <h3>Ipsum dolor</h3>
+                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+              </section>
+            </div>
+            <div class="features-row">
+              <section>
+                <span class="icon major fa-cloud accent4"></span>
+                <h3>Sed feugiat</h3>
+                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+              </section>
+              <section>
+                <span class="icon major fa-lock accent5"></span>
+                <h3>Enim phasellus</h3>
+                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+              </section>
+            </div>
+          </section> -->
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+          <!-- <div class="row">
+            <div class="6u 12u(narrower)">
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+              <section class="box special">
+                <span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
+                <h3>Sed lorem adipiscing</h3>
+                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+                <ul class="actions">
+                  <li><a href="#" class="button alt">Learn More</a></li>
+                </ul>
+              </section>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+            </div>
+            <div class="6u 12u(narrower)">
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+              <section class="box special">
+                <span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
+                <h3>Accumsan integer</h3>
+                <p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+                <ul class="actions">
+                  <li><a href="#" class="button alt">Learn More</a></li>
+                </ul>
+              </section>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+            </div>
+          </div> -->
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+        </section>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+      <!-- CTA -->
+        <section id="cta">
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/derektinydj">derektinydj</a> can be found on <a href="https://github.com/derektinydj">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
+          <h2>Sign up for our mailing list</h2>
+          <p>We won't spam, promise</p>
+          <!-- <form action="https://tinyletter.com/tinydj" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/tinydj', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+            <p></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+         -->
+          <form action="https://tinyletter.com/tinydj" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/tinydj', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+            <div class="row uniform 50%">
+              <div class="8u 12u(mobilep)">
+                <input type="email" name="email" id="email" placeholder="Email Address" />
+              </div>
+              <input type="hidden" value="1" name="embed"/>
+              <div class="4u 12u(mobilep)">
+                <input type="submit" value="Sign up" class="fit" />
+              </div>
+            </div>
+            <p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p>
+          </form>
+
+        </section>
+
+      <!-- Footer -->
+        <footer id="footer">
+          <!-- <ul class="icons">
+            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+            <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+          </ul> -->
+          <ul class="copyright">
+            <li>&copy; Tiny DJ Studios. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </footer>
 
     </div>
 
-    
+    <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/main.js"></script>
+
   </body>
 </html>
