--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Banner -->
         <section id="banner">
           <h2>Tiny DJ Studios</h2>
-          <p>Poineers in Interactive Art and Game Design</p>
+          <p>Pioneers in Interactive Art and Game Design</p>
           <ul class="actions">
             <!-- <li><a href="#" class="button special">Sign Up</a></li> -->
             <!-- <li><a href="#cta" class="button"> Get In Touch</a></li> -->
